fix: fix homelayout overflow scrolling

--- a/components/layouts/homeLayout/HomeLayout.module.css
+++ b/components/layouts/homeLayout/HomeLayout.module.css
@@ -20,18 +20,8 @@
  *   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  *   SOFTWARE.
  */
-import NavigationBar from "./navigationBar/NavigationBar"
-import styles from "./HomeLayout.module.css"
 
-export interface IHomeLayout extends React.ComponentPropsWithoutRef<'div'> { }
-
-const HomeLayout: React.FC<IHomeLayout> = ({ children, ..._divProps }) => {
-  return <>
-    <NavigationBar />
-    <div className={styles.root}>
-    {children}
-    </div>
-  </>;
-};
-
-export default HomeLayout;
+.root {
+  overflow-y: auto;
+  max-height: 100vh;
+}
